# cboard

./: .gitignore  EULA.txt  Makefile  README.md  package-lock.json  package.json  todo.txt  vite.config.ts
.github/workflows/: build_app.yml  build_site.yml
site/: index.html  package.json
site/public/: index.js  styles.css
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_replacement.rs  autorun.rs  clipboard.rs  common.rs  filesys.rs  helpers.rs  hotkeys_listener.rs  hotkeys_reader.rs  input_lang.rs  keyboard_layouts.rs  keys.rs  lib.rs  main.rs  processes.rs  settings.rs  tray.rs  win_key.rs  win_key_hook.rs  window.rs
src-tauri/src/clipboard/: image.rs  lib.rs  mod.rs
src/common/: constants.ts  helpers.ts  interfaces.ts  localStorage.ts
src/components/: AppAutoreplacement.vue  AppBlacklist.vue  AppBtn.vue  AppClipboard.vue  AppHeaderbar.vue  AppKeyboardLayouts.vue  AppPopup.vue  AppProcessList.vue  AppReplRow.vue  AppSettings.vue  AppTabs.vue  AppTitlebar.vue  HelloWorld.vue
src/router/: index.ts  routenames.ts
src/services/: backend.ts
