[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "os-all", "fs-write-file", "protocol-asset", "dialog-all", "fs-exists", "fs-read-dir", "fs-read-file", "global-shortcut-all", "system-tray", "window-all"] }
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
arboard = "3.2.0"
image = "0.25.1"
# sys-locale ???
sys-locale = "0.3.1"
winapi = { version = "0.3", features = ["winuser", "winnt", "winnls"] }
rdev = { version = "0.5.3", features = ["serialize"] }
enigo = { version = "0.2.1" }
device_query = "2.1.0"
percent-encoding = "2.3.1"
parking_lot = "0.12.3"
sysinfo = "0.31"
tokio = { version = "^1.19", features = ["rt", "time"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = true
debug-assertions = true
